--- a/mysite/moviereview/templates/moviereview/del_rev_conf.html
+++ b/mysite/moviereview/templates/moviereview/del_rev_conf.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Are you sure you want to delete this review?</h2>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Delete</button>
-    <a href="{% url 'myportal' %}">Cancel</a>
-</form>
+<div class="delete-review-container">
+    <form method="post">
+        <h2>Are you sure you want to delete this review?</h2>
+        {% csrf_token %}
+        <button type="submit">Delete</button>
+        <a href="{% url 'myportal' %}">Cancel</a>
+    </form>
+</div>
 {% endblock %}
+
