--- a/mysite/moviereview/templates/moviereview/movie_detail.html
+++ b/mysite/moviereview/templates/moviereview/movie_detail.html
@@ -40,7 +40,10 @@
                         {% endfor %}
                     </ul>
                 {% else %}
-                    <p>No streaming services available for this movie.</p>
+                    <p>
+                        There are no streaming services available for this movie that provide it in the rent or
+                        subscription option with UHD quality.
+                    </p>
                 {% endif %}
             </div>
         </div>
