--- a/mysite/static/css/styles.css
+++ b/mysite/static/css/styles.css
@@ -1,25 +1,25 @@
 /* General Layout and Colors */
 body {
     font-family: 'Roboto', sans-serif;
-    color: #333333; /* Maintaining general text color */
-    background-color: #f0f0f0; /* Light background to ensure readability */
+    color: #333333;
+    background-color: #f0f0f0;
     margin: 0;
     padding: 0;
 }
 header {
-    background-color: #293241; /* Updated to a dark slate color matching the logo background */
+    background-color: #293241;
     color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 10px; /* Increased padding to allow more space */
+    padding: 10px 10px;
     position: fixed;
     width: 100%;
     top: 0;
     box-sizing: border-box;
 }
 header .logo img {
-    height: 120px; /* Increased logo size */
+    height: 120px;
 }
 nav ul {
     list-style: none;
@@ -31,7 +31,7 @@ nav ul li {
     margin-left: 20px;
 }
 a {
-    color: #89c2d9; /* Changed link color to a bright red for better visibility and contrast */
+    color: #89c2d9;
     text-decoration: none;
 }
 a:hover {
@@ -41,15 +41,14 @@ a:hover {
 /* Main Content and Sidebar */
 main {
     display: flex;
-    /*flex-direction: row; !* Aligns children (image and details) in a row *!*/
-    justify-content: center; /* Centers the children horizontally */
-    align-items: stretch; /* Stretches the children to match heights */
-    gap: 20px; /* Adds space between the children */
-    margin-top: 20px; /* Adjust for fixed header */
+    justify-content: center;
+    align-items: stretch;
+    gap: 20px;
+    margin-top: 20px;
     padding: 55px;
 }
 footer {
-    background-color: #333333; /* Kept the same for consistency */
+    background-color: #333333;
     color: #ffffff;
     text-align: center;
     position: fixed;
@@ -65,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Buttons and Links */
 button, input[type="submit"] {
-    background-color: #293241; /* Button color matched to the header */
+    background-color: #293241;
     color: #ffffff;
     border: none;
     border-radius: 5px;
@@ -74,14 +73,14 @@ button, input[type="submit"] {
     box-shadow: 2px 2px 5px #666;
 }
 button:hover, input[type="submit"]:hover {
-    background-color: #1d2c34; /* Darker shade for hover */
+    background-color: #1d2c34;
 }
 
 /* Images and Thumbnails */
 img {
-    width: 100%; /* Ensures the image stretches to fill the container */
-    height: auto; /* Maintains aspect ratio */
-    display: block; /* Removes bottom space/gap */
+    width: 100%;
+    height: auto;
+    display: block;
 }
 
 /* Forms */
@@ -92,21 +91,21 @@ input[type="text"], input[type="search"], textarea {
     border: 1px solid #ccc;
 }
 input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
-    border-color: #e63946; /* Accent color for input focus */
+    border-color: #e63946;
 }
 .movie-image {
-    flex: 1; /* Allows the image to grow */
-    max-width: 600px; /* Maximum width of the image */
+    flex: 1;
+    max-width: 600px;
 }
 
 .movie-details {
-    flex: 2; /* Allows the details box to take twice the space of the image */
+    flex: 2;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: #fff; /* Adds background color */
-    border-radius: 8px; /* Rounded corners for the box */
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Adds shadow for depth */
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 
 .movie-info {
@@ -128,23 +127,22 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 /* Add some space between sections */
 .movie-info-section {
     margin-top: 0px;
-    /*margin-bottom: -20px;*/
 }
 
 /* Search Container */
 .search-result-container {
     flex-direction: column;
-    display: block; /* Ensures it behaves as a standard block-level element */
-    width: 100%; /* Takes full width to match the layout of the page */
-    margin: auto; /* Centers the container if needed */
-    padding: 0; /* Resets padding */
+    display: block;
+    width: 100%;
+    margin: auto;
+    padding: 0;
 }
 .search-container {
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
-    margin-top: 150px; /* Adjust the margin to avoid overlapping with a fixed header */
+    margin-top: 150px;
 }
 
 .search-container form {
@@ -157,7 +155,7 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px; /* Provides space between boxes */
+    gap: 20px;
     padding: 20px;
 }
 .movie-result {
@@ -171,34 +169,34 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 }
 
 .movie-result:hover {
-    background-color: #e2e6ea; /* Slightly darker on hover to indicate interactivity */
+    background-color: #e2e6ea;
 }
 
 .movie-result h2 {
-    font-size: 18px; /* Moderate font size for titles */
-    color: #333; /* Dark grey for text */
+    font-size: 18px;
+    color: #333;
     margin: 0;
 }
 .movie-link {
-    text-decoration: none; /* Removes underline from links */
-    color: inherit; /* Ensures text color is consistent */
+    text-decoration: none;
+    color: inherit;
 }
 .signup-content {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 80vh; /*Adjust height to ensure the form is vertically centered*/
+    min-height: 80vh;
     margin-top: 20px;
 }
 .signup-content form {
     display: flex;
     flex-direction: column;
-    width: 100%; /* Adjust based on preference */
-    max-width: 800px; /* Maximum width of the form */
+    width: 100%;
+    max-width: 800px;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Optional: adds shadow for depth */
-    border-radius: 8px; /* Rounded corners */
-    background-color: #fff; /* Background color for the form */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    background-color: #fff;
 }
 
 .signup-content form h2 {
@@ -210,7 +208,7 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
     padding: 10px;
     margin-top: 20px;
     color: white;
-    background-color: #293241; /* Bootstrap primary color */
+    background-color: #293241;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -218,7 +216,7 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 }
 
 .signup-content form button:hover {
-    background-color: #89c2d9; /* Darken button color on hover */
+    background-color: #89c2d9;
 }
 
 /* General style for login page */
@@ -239,12 +237,12 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     border-radius: 10px;
     background-color: #fff;
-    align-items: center; /* This ensures all children are centered */
+    align-items: center;
 }
 
 .login-container form label {
-    self-align: start; /* Aligns the label to the start of the flex container */
-    width: 100%; /* Ensures label takes full width of the form for uniform alignment */
+    self-align: start;
+    width: 100%;
     margin-bottom: 5px;
     color: #333;
     font-size: 14px;
@@ -276,7 +274,7 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 }
 
 * {
-    box-sizing: border-box; /* Includes padding and borders in the element's total width and height */
+    box-sizing: border-box;
 }
 /* Logout Page Styles */
 .logout-page {
@@ -284,19 +282,19 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 80vh; /* Full viewport height to center content vertically */
-    text-align: center; /* Center text and button */
+    min-height: 80vh;
+    text-align: center;
 }
 
 .logout-page p {
-    font-size: 30px; /* Larger text for the logout message */
-    margin-bottom: 20px; /* Space between message and button */
+    font-size: 30px;
+    margin-bottom: 20px;
 }
 
 .logout-page a {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #293241; /* Primary blue color */
+    background-color: #293241;
     color: white;
     text-decoration: none;
     border-radius: 5px;
@@ -304,7 +302,7 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 }
 
 .logout-page a:hover {
-    background-color: #89c2d9; /* Darker shade on hover */
+    background-color: #89c2d9;
 }
 .logout-button {
     all: unset;
@@ -321,35 +319,31 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 }
 
 .reviews-section {
-    background-color: #f8f9fa; /* Light background color for the reviews section */
+    background-color: #f8f9fa;
     padding: 20px;
-    margin-top: 20px; /* Space between movie details and reviews */
+    margin-top: 20px;
 }
 
 .reviews-section h2 {
-    color: #293241; /* Consistent color for headings */
-    padding-bottom: 10px; /* Space below the heading */
-    border-bottom: 2px solid #ccc; /* Line under the heading */
+    color: #293241;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #ccc;
 }
 
 .reviews-section ul {
-    list-style-type: none; /* Remove bullets */
+    list-style-type: none;
     padding: 0;
 }
 
 .reviews-section li {
     padding: 10px;
-    border-bottom: 1px solid #eee; /* Light line between reviews */
+    border-bottom: 1px solid #eee;
     margin-bottom: 5px;
 }
 
 .reviews-section li:last-child {
-    border-bottom: none; /* No border for the last item */
+    border-bottom: none;
 }
-
-/*#review-form {*/
-/*    padding-top: 20px; !* Space above the form *!*/
-/*}*/
 
 .flow-direction-column {
     display: flex;
@@ -369,7 +363,6 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
     gap: 20px;
     justify-content: center;
     padding: 80px;
-
 }
 
 .reviewed-movie-container {
@@ -407,19 +400,17 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
     margin-top: 5px;
 }
 .review-text-box {
-    background-color: white; /* Sets the background color to white */
-    border: 1px solid #ccc; /* Adds a light grey border */
-    border-radius: 10px; /* Rounded corners */
-    padding: 10px; /* Adds space inside the box, around the text */
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Optional: adds a subtle shadow for depth */
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     margin-top: 5px;
 }
 .my-portal {
     margin-bottom: 20px;
     margin-top: 80px;
     padding: 10px;
-    /*border: 1px solid #ccc;*/
-    /*border-radius: 5px;*/
     min-width: 100%;
 }
 .my-portal  h2{
@@ -435,18 +426,18 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 /* Styles for the Edit Review page */
 .edit-review-container {
     width: 100%;
-    max-width: 600px; /* Limits the width of the form to 600px */
-    margin: 100px auto; /* Centers the container */
+    max-width: 600px;
+    margin: 100px auto;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Adds subtle shadow for depth */
-    background-color: #fff; /* White background */
-    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    background-color: #fff;
+    border-radius: 8px;
 }
 
 .edit-review-container h2 {
-    text-align: center; /* Centers the heading */
-    color: #333; /* Dark grey for text for better readability */
-    margin-bottom: 20px; /* Spacing below the header */
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
 }
 
 .edit-review-container form {
@@ -457,21 +448,21 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 .edit-review-container label {
     margin-bottom: 5px;
     font-weight: bold;
-    color: #555; /* Slightly lighter than the heading color */
+    color: #555;
 }
 
 .edit-review-container input,
 .edit-review-container textarea,
 .edit-review-container select {
     padding: 10px;
-    margin-bottom: 15px; /* Spacing between form fields */
-    border: 1px solid #ccc; /* Light grey border */
-    border-radius: 4px; /* Rounded corners for inputs */
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 .edit-review-container button {
     padding: 10px 15px;
-    background-color: #293241; /* Bootstrap primary blue */
+    background-color: #293241;
     color: white;
     border: none;
     border-radius: 4px;
@@ -480,54 +471,54 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 }
 
 .edit-review-container button:hover {
-    background-color: #89c2d9; /* Darker shade of blue on hover */
+    background-color: #89c2d9;
 }
 .delete-review-container {
-    max-width: 400px; /* Restricts the width of the form */
-    margin: 30px auto; /* Centers the form vertically and horizontally */
-    margin: 100px auto; /* Centers the container */
+    max-width: 400px;
+    margin: 30px auto;
+    margin: 100px auto;
     padding: 20px;
-    background-color: #fff; /* White background for the form */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Adds subtle shadow for depth */
-    text-align: center; /* Aligns text and elements to the center */
-    border-radius: 8px; /* Rounds corners */
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    text-align: center;
+    border-radius: 8px;
 }
 
 .delete-review-container h2 {
-    color: #333; /* Dark grey for text */
-    margin-bottom: 20px; /* Space below the header */
+    color: #333;
+    margin-bottom: 20px;
 }
 
 .delete-review-container button,
 .delete-review-container a {
     all: unset;
-    width: 100px;  /* Uniform width */
-    padding: 10px 15px;  /* Uniform padding */
-    font-size: 16px;  /* Uniform font size */
-    text-align: center;  /* Center text */
-    line-height: 20px;  /* Adjust line height for vertical alignment */
-    margin: 5px;  /* Space around buttons */
-    background-color: #293241; /* Primary button color */
-    color: white;  /* Text color */
-    border: none;  /* Remove default borders */
-    border-radius: 5px;  /* Uniform rounded corners */
-    display: inline-block;  /* Align buttons in line */
-    text-decoration: none;  /* Remove underline from links */
-    cursor: pointer;  /* Cursor to indicate clickable */
-    vertical-align: middle;  /* Align buttons vertically */
+    width: 100px;
+    padding: 10px 15px;
+    font-size: 16px;
+    text-align: center;
+    line-height: 20px;
+    margin: 5px;
+    background-color: #293241;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    vertical-align: middle;
 }
 
 .delete-review-container a {
-    background-color: #6c757d; /* Bootstrap secondary grey */
+    background-color: #6c757d;
 }
 
 .delete-review-container button:hover,
 .delete-review-container a:hover {
-    opacity: 0.8; /* Slight transparency on hover for interaction feedback */
+    opacity: 0.8;
 }
 .home-container {
     text-align: center;
-    padding-top: 75px; /* Adjust based on your header size */
+    padding-top: 75px;
     width: 80%;
     margin: 20px auto;
 }
@@ -574,4 +565,3 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 .trending-movie a:hover {
     text-decoration: underline;
 }
-/*min-height: 80vh;*/
