Again Final Commit

--- a/mysite/moviereview/templates/moviereview/reviewed_movies.html
+++ b/mysite/moviereview/templates/moviereview/reviewed_movies.html
@@ -15,7 +15,7 @@
         </div>
         {% endfor %}
     {% else %}
-        <p>There are no reviewed movies yet.</p>
+        <p><strong>There are no reviewed movies yet.</strong></p>
     {% endif %}
 </div>
 {% endblock %}
